Storage redone
